--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -95,6 +95,7 @@
     padding: 0.2em 1em;
     font-size: 2em;
     color: #289391;
+    text-decoration: underline;
   }
 
   .content{
@@ -124,6 +125,8 @@
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     text-decoration: none;
     color: #278b8a;
+    font-size: 1em;
+    padding: 0.5em 0.2em;
   }
   
   .card {
@@ -205,10 +208,12 @@
   }
   .resto-item__name{
     margin: 0.5em 0;
-    font-size:x-large;
+    font-size: 1.5em;
+    padding: 0.2em;
     font-weight: bolder;
     color: #278b8a;
     text-align: center;
+    text-decoration: underline;
   }
   .resto-item__name-detail{
     margin: 0.5em 0;
@@ -327,7 +332,7 @@
     font-size: 1.1em;
     border: 0;
     border-radius: 8px;
-    padding: 4px 8px;
+    padding: 12px 14px;
     font-family: 'Source Sans Pro', sans-serif;
     outline: 2px solid #278b8a;
   }
@@ -340,15 +345,17 @@
     outline: 2px solid #278b8a;
   }
   .btn-search{
-    margin-top: 5px;
+    padding: 14px 18px;
+    margin-top: 7px;
     outline: 2px solid #278b8a;
   }
   .btn-post{
-    margin-top: 5px;
+    padding: 14px 18px;
+    margin-top: 7px;
     outline: 2px solid #278b8a;
   }
   button {
-    padding: 10px 20px;
+    padding: 12px 20px;
     cursor: pointer;
     transition: all 0.2s ease-in-out 0s;
     border: 0;
@@ -365,16 +372,7 @@
     color: #ddd;
     background-color: #54bab9;
   }
-  .btn-green:hover,
-  .btn-danger:hover {
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    color: #ddd;
-  }
   
-  .btn-danger {
-    color: #ddd;
-    background-color: #ff6464 !important;
-  }
   .btn-dark {
     color: #ddd;
     background-color: #575757;
@@ -403,6 +401,7 @@
   }
   
   .text-center {
+    margin: 0 auto;
     text-align: center;
   }
   .text-justify {
@@ -449,6 +448,22 @@
     bottom: 16px;
     right: 16px;
     background-color: #db0000;
+    color: white;
+    border: 0;
+    border-radius: 50%;
+    width: 55px;
+    height: 55px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .liked {
+    font-size: 18px;
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    background-color: #7b0d0d;
     color: white;
     border: 0;
     border-radius: 50%;
