Memperbaiki skip-link

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,10 +32,10 @@
         </nav>
     </header>
     
-    <main id="mainContent">
+    <main tabindex="0" id="mainContent">
         <section class="content">
             <div id="restaurants" class="restaurants">
-                <h3 tabindex="1" class="resto__label" aria-label="this is restaurant label and above a list of restaurants.">RESTAURANTS</h3>
+                <h3 tabindex="0" class="resto__label" aria-label="this is restaurant label and above a list of restaurants.">RESTAURANTS</h3>
                 <div id="restoList" class="resto-list">
                 </div>
             </div>
